# auto-shorts

./: .gitignore  main.py  pyproject.toml
src/auto_shorts/: analysis.py  download.py  project.py  test.py  transcript.py  video_edit.py
